@@ -5,6 +5,7 @@ python-apt (0.7.94.3) UNRELEASED; urgency=low
     - Make Cache.get_changes() much (~35x) faster (Closes: #578074).
     - Make Cache.req_reinstall_pkgs much faster as well.
     - Make Cache.get_providing_packages() about 1000 times faster.
+    - Use has_versions and has_provides from apt_pkg.Package where possible.
   * apt/package.py:
     - Decode using utf-8 in installed_files (LP: #407953).
     - Fix fetch_source() to work when source name = binary name (LP: #552400).
